# esp32-c6-agentic-firmware

./: .gitignore  APPROACH.md  ARCHIVED_LESSONS.md  CLAUDE.md  CONTRIBUTING.md  ESP_HAL_1.0_FEATURES.md  GDB_EXECUTIVE_SUMMARY.md  GDB_LESSON_PLANS.md  GDB_REFERENCE.md  GPIO_REGISTERS.md  HARDWARE_TEST_REPORT.md  IDEAS.md  LESSON_01_COMMIT_PLAN.md  LESSON_01_TEST_REPORT.md  LESSON_GENERATION_GUIDE.md  LICENSE-APACHE  MODERN_RUST_ECOSYSTEM.md  QUICKSTART.md  README.md  REMOTE_DEVELOPMENT.md  TESTING_SUMMARY.md  read_serial.py
.claude/commands/: async-task.md  dev.md  esp32-debug.md  find-registers.md  gdb-blinky.md  gen-all-lessons.md  gen-lesson.md  hal-driver.md  hardware-test.md  improve-command.md  prd.md  review-repo.md  rtt-suite.md  rtt.md  test-all-lessons.md  test-debug-infrastructure.md  test-gdb-lesson.md  test-lesson.md
.claude/templates/: check-cargo-locks.sh  read_uart.py  test-all-lessons.sh  validate-lesson.sh
daemons/: README.md  TROUBLESHOOTING.md
daemons/uart/: uart_daemon.py
docs/: DEBUGGING_INFRASTRUCTURE.md  LESSON_02_PRD.md  LESSON_PLAN.md  QUICK_START_REMOTE.md  REMOTE_ARCHITECTURE.md  SETUP_REMOTE_MONITOR.md  SUMMARY.md  VIDEO_SERIES_PLAN.md
docs/prd/: lesson-02-embassy-async-prd.md  lesson-06-uart-terminal-prd.md
future/: README.md  rtt-guide.md
future/08-defmt-rtt-logging/: .gdbinit  COMPREHENSIVE_DEBUG_REPORT.md  Embed.toml  FLASH_SIZE_COMPARISON.md  README.md  RTT_DEBUGGING_LOG.md  esp32c6-builtin.cfg  gdb_helpers.py  jlink-esp32c6.cfg  openocd.cfg
future/08-defmt-rtt-logging/.cargo/: config.toml
future/08-defmt-rtt-logging/src/: button.rs  lib.rs
future/09-rtt-exploration/: ADS1015_DATA_DRIVEN_DEVELOPMENT.md  Cargo.toml  README.md  TEST.md  TEST_RESULTS.md  WORKPLAN.md  test_structured_logging.py
future/09-rtt-exploration/src/: telemetry.rs
lessons-archive/01-button-neopixel/: Cargo.toml  README.md  TEST.md
lessons-archive/02-task-scheduler/: README.md  TEST.md
lessons-archive/02-task-scheduler/src/: lib.rs  neopixel.rs  scheduler.rs
lessons-archive/03-mpu9250/: README.md  TEST.md
lessons-archive/04-static-color-navigator/: Cargo.toml  README.md  TEST.md  build.rs
lessons-archive/04-static-color-navigator/src/: button.rs  color.rs  lib.rs  scheduler.rs  state_machine.rs
lessons-archive/05-unit-and-integration-testing/: Cargo.toml  README.md  TEST.md
lessons-archive/05-unit-and-integration-testing/src/: color.rs  lib.rs  rotation.rs  state_machine.rs
lessons-archive/06-uart-terminal/: README.md  TEST.md
lessons-archive/06-uart-terminal/src/: uart.rs
lessons-archive/07-gdb-debugging/: Cargo.toml  README.md  TEST.md  ftdi-dual-rs232.cfg
lessons-archive/07-gdb-debugging/src/: lib.rs
lessons-archive/08-uart-gdb-tandem/: Cargo.toml  README.md  TEST.md
lessons/01-blinky/: Cargo.toml  README.md
lessons/01-blinky/src/: main.rs
lessons/01-gdb-blinky/: Cargo.toml  DEBUGGING_JOURNEY.md  HARDWARE_TEST_REPORT.md  QUICKSTART.md  README.md  test_blink.gdb  test_continuous_blink.gdb
lessons/01-gdb-blinky/.cargo/: config.toml
lessons/01-gdb-blinky/gdb_scripts/: blinky.gdb  manual_control.gdb  snapshot_registers.gdb
lessons/01-gdb-blinky/src/: lib.rs
lessons/02-debugger/: README.md
lessons/02-embassy-tasks/: Cargo.toml  README.md
lessons/02-simple-tasks/: Cargo.toml  README.md
lessons/02-simple-tasks/.cargo/: config.toml
lessons/02-simple-tasks/src/: main.rs
lessons/02-task-scheduler/: Cargo.toml  README.md
lessons/02-task-scheduler/src/: button.rs
lessons/02-uart-dma/: Cargo.toml  HARDWARE_TEST_REPORT.md  README.md
lessons/02-uart-dma/.cargo/: config.toml
lessons/02-uart-dma/src/: lib.rs
lessons/03-mpu9250/: Cargo.toml  README.md
lessons/03-mpu9250/.cargo/: config.toml
lessons/03-mpu9250/src/: lib.rs  scheduler.rs  tasks.rs
lessons/04-statig-color-navigator/: README.md
lessons/06-uart-terminal/: Cargo.toml
lessons/06-uart-terminal/.cargo/: config.toml
lessons/06-uart-terminal/src/: cli.rs  lib.rs  mpu9250.rs
lessons/07-gdb-debugging/src/: cli.rs
lessons/08-defmt-rtt-logging/: Embed.toml
lessons/08-uart-gdb-tandem/: Cargo.toml  DAEMON_DESIGN.md  HIGH_SPEED_OPTIMIZATION_PLAN.md  LESSON_08_REDESIGN.md  PLAN.md  TEST.md  V2_IMPROVEMENTS.md  VARIABLE_STREAMING_SYSTEM.md  plot_sensor_data.py  var_stream.py
lessons/08-usb-cdc-streaming/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  stream_parser.py
lessons/08-usb-cdc-streaming/.cargo/: config.toml
lessons/08-usb-cdc-streaming/src/: lib.rs
lessons/09-rtt-exploration/: rtt_parser.py
lessons/09-rtt-exploration/src/: lib.rs
my-project/: Cargo.toml
scripts/: find-registers.py
