[package]
name = "lesson-07-gdb-debugging"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
# ESP32 HAL and peripherals
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-backtrace = { version = "0.15", features = ["esp32c6", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32c6", "log"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

# NeoPixel (from Lesson 01)
smart-leds = "0.4"
esp-hal-smartled2 = { version = "0.26", features = ["esp32c6"] }

# State machine (from Lesson 04)
statig = { version = "0.3", default-features = false, features = ["macro"] }

# UART CLI framework
menu = { version = "0.6", default-features = false }
heapless = "0.8"

# Logging
log = "0.4"

[profile.dev]
opt-level = "s"
debug = 2  # Full debug symbols for GDB

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
