[package]
name = "lesson-01-blinky"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
# Hardware abstraction layer - controls ESP32-C6 peripherals
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }

# Panic handler - prints crash info when code panics
esp-backtrace = { version = "0.15", features = ["esp32c6", "panic-handler", "println"] }

# Serial printing - needed for logging to console
esp-println = { version = "0.13", features = ["esp32c6", "log"] }

# Standard logging framework - provides info!, debug!, warn! macros
log = { version = "0.4" }

# Bootloader app descriptor
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

# Critical sections for safe concurrent access
critical-section = "1.2.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
