[package]
name = "lesson-01-gdb-blinky"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6"] }
esp-backtrace = { version = "0.15", features = ["esp32c6", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32c6", "log"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
log = "0.4"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = true  # Keep debug symbols for GDB
